# solana-arbitrage-bot

./: .env.example  .gitignore  CODEX_REVIEW_9ae2d03.md  Cargo.toml  README.md  narrow-routes.feecorrect.json  narrow-routes.json  package-lock.json  package.json  pools.json  tsconfig.json
bot/: Cargo.toml
bot/src/: main.rs
common/: Cargo.toml
common/src/: cost.rs  ix.rs  lib.rs  mode.rs  opportunity.rs
docs/: current-architecture.md  gap-analysis.md  implementation-plan.md  meteora-dlmm-layout.md  pump-amm-layout.md  pump-fee-v2-layout.md  vps-fee-correct-observe-runbook.md
executor/: Cargo.toml
executor/src/: app.rs  blockhash.rs  builder.rs  config.rs  jito.rs  lib.rs  main.rs  resolver.rs  tip.rs  types.rs
mock-dex/: Cargo.toml
mock-dex/src/: lib.rs
monitor/: Cargo.toml
monitor/fixtures/meteora/: swap2_cpi_fixtures.json
monitor/fixtures/pump/: fee_v2_evidence.json  reconstruction_fixtures.json
monitor/src/: bootstrap.rs  config.rs  consistency.rs  discovery.rs  fixture_capture.rs  geyser.rs  lib.rs  main.rs  market_discovery.rs  math.rs  meteora_direct_call.rs  meteora_dlmm.rs  meteora_reconstruct.rs  narrow_report.rs  observe_live.rs  observe_report.rs  optimizer.rs  parsers.rs  pipeline.rs  pump_amm.rs  pump_evidence.rs  pump_feev2.rs  pump_reconstruct.rs  pump_reprice.rs  quote.rs  redis_sink.rs  registry.rs  route_engine.rs  sim_client.rs  sim_parity.rs  tick_math.rs  types.rs
program/: .gitignore  Cargo.toml
program/src/: lib.rs
program/tests/: integration.rs
scripts/: verify-layouts.ts
src/: config.ts  geyser.ts  graph.ts  math.ts  price-monitor.ts  redis-sink.ts  selftest.ts  types.ts  utils.ts
src/parsers/: raydium.ts  spl.ts  whirlpool.ts
validation/: .gitignore  compare.mjs  run-parity.sh  scenarios.json  ts-harness.ts
validation/live/: compare-live.mjs  run-live.sh
