[package]
name = "arb-common"
version = "0.1.0"
edition = "2021"
description = "Shared byte-level types: instruction ABI + opportunity wire format. no_std + alloc, zero Solana dependencies — usable from the Pinocchio on-chain program and every off-chain crate."

[features]
default = ["std", "serde"]
std = []
# serde (opportunity JSON) is an off-chain concern and pulls in std.
serde = ["dep:serde", "std"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
bs58 = "0.5"
