[package]
name = "arb-executor"
version = "0.1.0"
edition = "2021"
description = "Off-chain execution bot: Redis opportunity listener -> Jito bundle submitter"

[dependencies]
arbitrage-program = { path = "../program", features = ["no-entrypoint"] }
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
solana-sdk = "2.1"
solana-client = "2.1"
bincode = "1.3"
bs58 = "0.5"
rand = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
solana-system-interface = { version = "1", features = ["bincode"] }

[[bin]]
name = "arb-executor"
path = "src/main.rs"

[[bin]]
name = "create-alt"
path = "src/bin/create_alt.rs"
