[package]
name = "arb-monitor"
version = "0.1.0"
edition = "2021"
description = "Rust price monitor / cycle discovery (migration of the TypeScript src/). Phase B: Geyser stream, parsers, registry, discovery engine, Redis publisher."

[dependencies]
arb-common = { path = "../common" }
ruint = "1"
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
solana-sdk = "2.1"
solana-client = "2.1"
yellowstone-grpc-client = "13"
yellowstone-grpc-proto = "12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
solana-account-decoder = "2.1"
solana-transaction-status-client-types = "2.1"
base64 = "0.22"
bincode = "1"

[dev-dependencies]
base64 = "0.22"

[[bin]]
name = "arb-monitor"
path = "src/main.rs"

[[bin]]
name = "preview"
path = "src/bin/preview.rs"

[[bin]]
name = "discover-pools"
path = "src/bin/discover_pools.rs"

[[bin]]
name = "parity_harness"
path = "src/bin/parity_harness.rs"

[[bin]]
name = "dlmm_quote_cli"
path = "src/bin/dlmm_quote_cli.rs"

[[bin]]
name = "discover-markets"
path = "src/bin/discover_markets.rs"

[[bin]]
name = "observe-markets"
path = "src/bin/observe_markets.rs"

[[bin]]
name = "observe-narrow"
path = "src/bin/observe_narrow.rs"

[[bin]]
name = "rebuild-report"
path = "src/bin/rebuild_report.rs"

[[bin]]
name = "capture-parity-fixtures"
path = "src/bin/capture_parity_fixtures.rs"

[[bin]]
name = "sim-meteora-route1"
path = "src/bin/sim_meteora_route1.rs"
