[package]
name = "arbitrage-program"
version = "0.1.0"
edition = "2021"
description = "Atomic cyclic-arbitrage executor with on-chain profit enforcement"

[features]
no-entrypoint = []

[dependencies]
arb-common = { path = "../common", default-features = false }
solana-program = "2.1"

[dev-dependencies]
# mollusk 0.13 uses the agave split crates; match its exact versions so the
# harness Pubkey/Instruction/Account types are the same crate. The test does
# NOT touch the program's own solana-program types, so this stays decoupled
# from the on-chain build (which becomes Pinocchio in Phase E).
mollusk-svm = "0.13"
mollusk-svm-programs-token = "0.13"
solana-account = "3.4"
solana-instruction = "3.2"
solana-instruction-error = "2.1"
solana-pubkey = "4.1"
solana-rent = "3.1"

[lib]
crate-type = ["cdylib", "lib"]

# entrypoint! expands cfg checks for optional custom-heap/custom-panic
# features; declare them so newer toolchains don't warn.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("custom-heap", "custom-panic"))',
  'cfg(target_os, values("solana"))',
] }
