[package]
name = "arbitrage-program"
version = "0.1.0"
edition = "2021"
description = "Atomic cyclic-arbitrage executor with on-chain profit enforcement (Pinocchio, no_std)"

[features]
# Kept so downstream crates (executor) can depend without pulling the
# on-chain entrypoint. With Pinocchio the entrypoint is also gated on
# target_os = "solana", so host builds never compile it regardless.
no-entrypoint = []

[dependencies]
arb-common = { path = "../common", default-features = false }
pinocchio = { version = "0.11", features = ["cpi"] }

[dev-dependencies]
# mollusk 0.13 uses the agave split crates; match its exact versions so the
# harness Pubkey/Instruction/Account types are the same crate. The test does
# NOT touch the program's own Pinocchio types, so this stays decoupled from
# the on-chain build.
mollusk-svm = "0.13"
mollusk-svm-programs-token = "0.13"
solana-account = "3.4"
solana-instruction = "3.2"
solana-instruction-error = "2.1"
solana-pubkey = "4.1"
solana-rent = "3.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
